--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-REAMDE file for the kio-clipboard package
+README file for the kio-clipboard package
 
 License: GPLv2+
 Author: Christian Reiner, Hamburg, Germany
