kio-clipboard: merged revisions 28:59 from branch 0.2 into trunk

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,13 +1,20 @@
-2011-07-30, Christian Reiner:
+* Sun Aug 07 2011 Christian Reiner: version 0.2.2
+- new structure for source file collection
+- slightly optimized icons by usage of overlays (for kde>=4.5)
+- fixed 'delete item' action not to delete the target file pointed to (!)
+- preparations for translation (i18n)
+- implementation of the 'copyToFile' feature for protocols
+- implementation of the 'copyFromFile' feature for protocols
+- -for human readable files the content will copied to the clipboard instead of the url or path
+- - for all other files or files that exceed the clipboard entries size limit a linking of the url/path is offered instead
+- - the user can chose to accept or cancel
+* Sat Jul 30 2011 Christian Reiner: version 0.2.1
 - changed technical names of virtual nodes from a numeric index to a check sum
-  this fixes addressing the wrong node after changes to the clipboard that were not reflected in an ambedding application
+- - this fixes addressing the wrong node after changes to the clipboard that were not reflected in an embedding application
 - additional content semantics 'Empty', since such content is not really 'Text'
-- changed version to 0.2.1
-
-2011-07-29, Christian Reiner:
+* Fri Jul 29 2011 Christian Reiner: version 0.2.0
 - complete rewrite of the internal storage structure
 - fixed display name of clipboard folders not to vanish when being clicked
-- changed version to 0.2.0
-
-2011-07-26, Christian Reiner:
-- release of the initial version 0.1.0
+* Tue Jul 27 2011 Christian Reiner: version 0.1
+- initial (and buggy) release
+- publication on kde-apps.org
