--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,24 +1,27 @@
-* Wed Aug 19 2011 Christian Reiner: version 0.2.4
-- a number of internal reorganisations as preparation for version 0.3 integrating further clipboard applciations/services
+* Sat Aug 20 2011 Christian Reiner: version 0.2.5
+- explicit specification of (virtual) file access rights and datetimes in nodes and clipboard folders
+- - that does not really control or restrict anything, it is (at least for local clipboards) an optical aspect only
+* Fri Aug 19 2011 Christian Reiner: version 0.2.4
+- a number of internal reorganizations as preparation for version 0.3 integrating further clipboard applciations/services
 - removed caching of entry payloads in memory out of scalability interests
 - dropped 'delete' action, this did not really make sense for clipboards
 - first introduction of a shared memory cache between separate slave processes
 - serialization feature for node wrapper objects, required for later persistent storage of clipboard entries between sessions
 - convenience improvements by higher abstraction of node lists
 * Wed Aug 10 2011 Christian Reiner: version 0.2.3
-- enhanced mimetype detection for text based clipboard entries
+- enhanced mime type detection for text based clipboard entries
 - detection of a few special types of text entries declared as "code"
-- simplyfied setup up of internal DBus clients
-- fixed cardinality of numeric index in displayed entry names to honour the clipboards size
+- simplified setup up of internal DBus clients
+- fixed cardinality of numeric index in displayed entry names to honor the clipboards size
 * Sun Aug 07 2011 Christian Reiner: version 0.2.2
 - new structure for source file collection
-- slightly optimized icons by usage of overlays (for kde>=4.5)
+- slightly optimized icons by usage of overlays (for KDE>=4.5)
 - fixed 'delete item' action not to delete the target file pointed to (!)
 - preparations for translation (i18n)
 - implementation of the 'copyToFile' feature for protocols
 - implementation of the 'copyFromFile' feature for protocols
-- -for human readable files the content will copied to the clipboard instead of the url or path
-- - for all other files or files that exceed the clipboard entries size limit a linking of the url/path is offered instead
+- -for human readable files the content will copied to the clipboard instead of the URL or path
+- - for all other files or files that exceed the clipboard entries size limit a linking of the URL/path is offered instead
 - - the user can chose to accept or cancel
 * Sat Jul 30 2011 Christian Reiner: version 0.2.1
 - changed technical names of virtual nodes from a numeric index to a check sum
